# djp-nosjob

./: .env  CLIENT_GUIDE.md  Cargo.toml  NIP.md  README.md  ai-agent-job.json  example-job-39993.json  std-example-job-39993.json  whitepaper.md
examples/: view_jobs.rs
research/: schemas.html
research/readmes/: README1.md  README10.md  README11.md  README2.md  README3.md  README4.md  README5.md  README6.md  README7.md  README8.md  README9.md  sample-AI-Agent.md  sample-human-on-site-ad.md  sample-human-remote-full-time.md
research/xp_code/: example_job_json.json  nostr_events_conversion.rs  nostr_job_types.rs  usage_examples.rs
src/: events.rs  json_parser.rs  lib.rs  main.rs  types.rs
