[package]
name = "nosjob"
version = "0.1.0"
edition = "2024"
authors = ["ken-worthington@protonmail.com"]

[dependencies]
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0.100"
chrono = "0.4.42"
dotenvy = "0.15.7"
nostr-sdk = "0.44.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
opt-level = "z"       # smallest code size
lto = true            # enable Link Time Optimization
codegen-units = 1     # better optimization, slightly slower compile
panic = "abort"       # no unwinding machinery
strip = true          # remove symbols (nightly or recent stable)
debug = false          # ensure no leftover DWARF ghosts
incremental = false    # repeatable, lean builds
